<resources>
    <string name="app_name">Rook Demo</string>
    <string name="menu">Menu</string>
    <string name="authorized_until_placeholder">Authorized until: %1$s</string>
    <string name="client_uuid">Client UUID</string>
    <string name="user_id">User ID</string>
    <string name="hc_placeholder_registered">Health Connect: %1$s is registered!</string>
    <string name="register_user">Register user</string>
    <string name="get_auth">Get auth</string>
    <string name="authorization">Authorization</string>
    <string name="transmission">Transmission</string>
    <string name="physical_event">Physical event</string>
    <string name="physical_summaries">Physical summaries</string>
    <string name="body_summaries">Body summaries</string>
    <string name="sleep_summaries">Sleep summaries</string>
    <string name="retry">Retry</string>
    <string name="clear_all">Clear all</string>
    <string name="users">Users</string>
    <string name="health_connect_availability">Health Connect availability</string>
    <string name="health_connect_permissions">Health Connect permissions</string>
    <string name="health_connect">Health Connect</string>
    <string name="health_connect_placeholder">Health Connect: %1$s</string>
    <string name="permissions_granted_placeholder">Permissions granted: %1$s</string>
    <string name="request_permissions">Request permissions</string>
    <string name="go_back">Go back</string>
    <string name="install_now">Install now</string>
    <string name="continue_text">Continue</string>
    <string name="open_health_connect">Open Health Connect</string>
    <string name="health_connect_permissions_tip">If the \'Request permissions\' button does not work try to open health connect, locate \'Rook Connect Demo\' app and grant and permissions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_header">This is a placeholder example.</string>
    <string name="privacy_policy_body">Your app should display an appropriate privacy policy for how you will handle and use Health Connect data. \n\n This sample app does not store or transmit any data outside of Health Connect.</string>
    <string name="select_a_day">Select a day</string>
    <string name="select_a_date">Select a date</string>
    <string name="sleep">Sleep</string>
    <string name="physical">Physical</string>
    <string name="body">Body</string>
    <string name="generate_enqueue_upload"><![CDATA[Generate > Enqueue > Upload]]></string>
    <string name="ready">Ready</string>
    <string name="generating">Generating…</string>
    <string name="enqueueing">Enqueueing…</string>
    <string name="enqueue_error_placeholder">There was an error enqueueing: %1$s</string>
    <string name="enqueued">Enqueued</string>
    <string name="upload_error_placeholder">There was an error uploading: %1$s</string>
    <string name="uploaded">Uploaded</string>
    <string name="user_info">User info</string>
    <string name="retrieve">Retrieve</string>
    <string name="individual_events">Individual events</string>
    <string name="blood_glucose_event">Blood glucose event</string>
    <string name="blood_pressure_event">Blood pressure event</string>
    <string name="body_metrics_event">Body metrics event</string>
    <string name="heart_rate_body_event">Heart rate body event</string>
    <string name="heart_rate_physical_event">Heart rate physical event</string>
    <string name="hydration_event">Hydration event</string>
    <string name="mood_event">Mood event</string>
    <string name="nutrition_event">Nutrition event</string>
    <string name="oxygenation_body_event">Oxygenation body event</string>
    <string name="oxygenation_physical_event">Oxygenation physical event</string>
    <string name="stress_event">Stress event</string>
    <string name="temperature_event">Temperature event</string>
    <string name="enqueue_this">Enqueue this</string>
    <string name="upload_queued">upload queued</string>
    <string name="clear_queued">Clear queued</string>
    <string name="health_data_enqueued">Health data enqueued</string>
    <string name="clearing">Clearing…</string>
    <string name="uploading">Uploading…</string>
    <string name="modules">Modules</string>
    <string name="selector">Selector</string>
    <string name="choose_an_implementation">Choose an implementation</string>
    <string name="choose_an_implementation_description">You can use the main SDK which handles everything or the individual modules for a more personalized behavior.</string>
    <string name="sdk">Sdk</string>
    <string name="sdk_playground">SDK Playground</string>
    <string name="_1_configure_sdk">1. Configure SDK</string>
    <string name="set_configuration">Set configuration</string>
    <string name="_2_initialize_sdk">2. Initialize SDK</string>
    <string name="initialize">Initialize</string>
    <string name="_3_update_user_id">3. Update user ID</string>
    <string name="update_user">Update user</string>
    <string name="_4_check_availability">4. Check availability</string>
    <string name="check_availability">Check availability</string>
    <string name="_4_1_download_health_connect">4.1. Download Health Connect</string>
    <string name="download_health_connect">Download Health Connect</string>
    <string name="_5_check_permissions">5. Check permissions</string>
    <string name="check_permissions">Check permissions</string>
    <string name="_5_1_request_permissions">5.1. Request permissions</string>
    <string name="_5_2_open_health_connect">5.2. Open Health Connect</string>
    <string name="_5_3_revoke_permissions">5.3 Revoke permissions</string>
    <string name="sync_pending_events">Sync pending events</string>
    <string name="sync_pending_events_optional">Sync pending events (optional)</string>
    <string name="sync_pending_summaries">Sync pending summaries</string>
    <string name="sync_pending_summaries_optional">Sync pending summaries (optional)</string>
    <string name="sync_health_data">Sync health data</string>
    <string name="_6_sync_health_data">6. Sync health data</string>
    <string name="user_time_zone">User Time Zone</string>
    <string name="extract">Extract</string>
    <string name="upload_this">Upload this</string>
    <string name="loading">Loading…</string>
    <string name="steps_service_title">Rook steps tracking service</string>
    <string name="steps_service_content">Rook is tracking your steps…</string>
    <string name="background_steps_is_running">Background Steps is running</string>
    <string name="background_steps_is_stopped">Background Steps is stopped</string>
    <string name="background_steps">Background steps</string>
    <string name="start_background_steps">Start Background Steps</string>
    <string name="stop_background_steps">Stop Background Steps</string>
    <string name="permissions_are_granted">Permissions are granted</string>
    <string name="missing_permissions">Missing permissions!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sdk_configuration">SDK Configuration</string>
    <string name="sync_title">Rook sync service</string>
    <string name="sync_content">Rook is syncing your health data…</string>
    <string name="yesterday_sync_permissions">Yesterday Sync Permissions</string>
    <string name="yesterday_sync_android_permissions">Android permissions (POST_NOTIFICATIONS, FOREGROUND_SERVICE, FOREGROUND_SERVICE_HEALTH, ACTIVITY_RECOGNITION)</string>
    <string name="yesterday_sync_health_connect_permissions">Health Connect permissions (SLEEP, PHYSICAL, BODY)</string>
    <string name="enable_yesterday_sync">Enable yesterday sync</string>
    <string name="disable_yesterday_sync">Disable yesterday sync</string>
    <string name="yesterday_sync">Yesterday Sync</string>
    <string name="yesterday_sync_description">Yesterday sync will execute a service every time you open the app. This service will retrieve all of your health data and send it to the ROOK servers.</string>
    <string name="yesterday_sync_requirements">To use Yesterday sync you need to Install Health Connect and grant the following permissions</string>
    <string name="current_day_steps">Current day steps: %1$d</string>
    <string name="observed_steps_of">Observed steps of %1$s: %2$d</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connections_page">Connections page</string>
    <string name="try_again">Try again</string>
    <string name="connections_page_pre_built">Connections page (pre-built)</string>
    <string name="give_permissions_manually">You previously denied permissions, now you must manually grant them.</string>
    <string name="revoke_permissions">Revoke permissions</string>
    <string name="configuration">Configuration</string>
    <string name="user_management">User management</string>
    <string name="data_sources">Data sources</string>
    <string name="permissions">Permissions</string>
    <string name="manually_sync_health_data">Manually sync health data</string>
    <string name="continuous_upload">Continuous upload</string>
    <string name="user_id_placeholder">User ID: %1$s</string>
    <string name="sync_user_device_timezone">Sync user (Device) timezone</string>
    <string name="sync_user_timezone">syncUserTimeZone</string>
    <string name="clear_user_id">clearUserID</string>
    <string name="delete_locally_user">Delete (locally) user</string>
    <string name="delete_user_from_rook">deleteUserFromRook</string>
    <string name="delete_deactivate_user_from_rook">Delete (deactivate) user from ROOK</string>
    <string name="sync_today_steps">Sync today steps</string>
    <string name="connections_page_data_sources_list">Connections page (data sources list)</string>
    <string name="present_data_source_view">presentDataSourceView</string>
    <string name="disconnect">Disconnect</string>
    <string name="data_source_disconnection_not_supported">This data source can only be disconnected from it\'s web page.</string>
    <string name="data_source_disconnection_failed">Failed to disconnect from %1$s, please try again.</string>
    <string name="data_source_disconnection_success">Disconnected from %1$s.</string>
    <string name="get_authorized_data_sources">getAuthorizedDataSources</string>
    <string name="check_health_connect_availability">checkHealthConnectAvailability</string>
    <string name="check_health_connect_permissions">checkHealthConnectPermissions</string>
    <string name="android_permissions">Android permissions</string>
    <string name="open_app_settings">openAppSettings</string>
    <string name="request_android_permissions">requestAndroidPermissions</string>
    <string name="check_android_permissions">checkAndroidPermissions</string>
    <string name="open_health_connect_settings">openHealthConnectSettings</string>
    <string name="check_health_connect_permissions_partially">checkHealthConnectPermissionsPartially</string>
    <string name="request_health_connect_permissions">requestHealthConnectPermissions</string>
    <string name="revoke_health_connect_permissions">revokeHealthConnectPermissions</string>
    <string name="sync_events">Sync events</string>
    <string name="sync_summaries">Sync summaries</string>
    <string name="enable_continuous_upload">Enable continuous upload</string>
    <string name="open_health_connect_description">If you don\'t see the permissions request list you must manually grant them</string>
    <string name="disable_continuous_upload">Disable continuous upload</string>
    <string name="connections">Connections</string>
    <string name="authorized_data_sources">Authorized data sources</string>
</resources>